synthv1 - an old-school polyphonic synthesizer
----------------------------------------------

ChangeLog


GIT HEAD

- Whether to use native file browser/requester dialogs is
  now an effective option when launching under NSM session
  management (was once disabled initially). (EXPERIMENTAL)
- Trying to get CC14 MSB+LSB (course+fine) running status on,
  no matter whether each pairing event are under 200ms apart.
  (EXPERIMENTAL)
- A little hardening on the configure (autoconf) macro side.
- An anti-flooding timer is now in place in MIDI Controller
  assignment (aka. MIDI learn) dialog. (EXPERIMENTAL)


0.8.6  2017-12-20  The End of Autumn'17 release.

- Sync option added to DCO wavetable oscillators, as for
  making either one to hard-sync (slave) with the other
  one (master) in each pair.
- Set on a minimum attack time of 500usec as much to prevent
  audible clicking on low-pitched notes.


0.8.5  2017-10-29  An Autumn'17 release.

- Opening multiple preset files is now possible, populating
  the preset drop-down listing, while only the first one is
  loaded effectively into the scene as usual.
- Mono(phonic) "Legato" mode option introduced.
- Desktop entry specification file is now finally independent
  from all build/configure template chains, whatever.
- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).


0.8.4  2017-08-22  A Late-Summer'17 release.

- Disabled "Custom style theme" option on LV2 plug-in form.
- Brand new LFO Balance parameter introduced.


0.8.3  2017-06-21  A Summer'17 release.

- Added StartupWMClass entry to desktop file.
- Long overdue, some brand new and fundamental icons revamp.


0.8.2  2017-05-02  Pre-LAC2017 release frenzy.

- A custom knob/spin-box behavioral option have been added:
  Configure/Knob edit mode, as to avoid abrupt changes upon
  editing values (still the default behavior) and only take
  effect (Deferred) when enter is pressed or the spin-box
  loses focus.